--- a/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
+++ b/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
@@ -93,8 +93,8 @@
           <nb-icon class="action-icon" icon="archive-outline"></nb-icon>
           <span>Ver histórico</span>
         </nb-action>-->
-        <nb-action *ngIf="(atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='03 - Consulta Confirmada')
-        && atendimento.formaPagamento == 'PIX'" (click)="abrirComprovante()">
+        <nb-action *ngIf="(atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='03 - Consulta Confirmada'
+        || atendimento.status ==='02 - Aguardando Pagamento') && atendimento.formaPagamento == 'PIX'" (click)="abrirComprovante()">
           <nb-icon class="action-icon" icon="attach-outline"></nb-icon>
           <span>Ver comprovante</span>
         </nb-action>
