--- a/src/app/pages/cadastro/cadastro-clinica/cadastro-clinica.component.html
+++ b/src/app/pages/cadastro/cadastro-clinica/cadastro-clinica.component.html
@@ -27,6 +27,11 @@
                     <div class="form-group">
                       <h6>Cadastro</h6>
                     </div>
+                    <div class="form-group">
+                      <div class="text-left">
+                        <b>{{ this.title }}</b>
+                      </div>
+                    </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-6">
                         <label for="nomeEmpresa">Nome da empresa*</label>
