--- a/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
+++ b/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
@@ -29,6 +29,11 @@
                     <div class="form-group">
                       <h6>Cadastro</h6>
                     </div>
+                    <div class="form-group">
+                      <div class="text-left">
+                        <b>{{ this.title }}</b>
+                      </div>
+                    </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-6">
                         <label for="nome">Nome completo*</label>
@@ -108,58 +113,6 @@
                           formControlName="telefoneCelular" [dropSpecialCharacters]="true"
                           mask="(00) 0 0000-0000 || (00) 0000-0000" maxlength="16" />
                       </div>
-                      <div class="col-md-4">
-                        <label for="numeroEmpresa">Número da Empresa</label>
-                        <input class="form-control" name="numeroEmpresa" id="numeroEmpresa" type="text"
-                          formControlName="numeroEmpresa" [dropSpecialCharacters]="true"
-                          mask="(00) 0 0000-0000 || (00) 0000-0000" maxlength="16" />
-                      </div>
-                      <div class="col-md-4">
-                        <label for="estado">Estado*</label>
-                        <select class="form-control" formControlName="estado"
-                          (change)="buscaCidade($event.target.value)">
-                          <option value="null" selected>SELECIONE</option>
-                          <option *ngFor="let estado of listEstado" value="{{ estado.id }}">{{
-                            estado.description}}</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group row pl-3">
-                      <div class="col-md-4">
-                        <label for="cidade">Cidade*</label>
-                        <select class="form-control" formControlName="cidade">
-                          <option value="null" selected>SELECIONE</option>
-                          <option *ngFor="let cidade of listCidade" value="{{ cidade.id }}">{{
-                            cidade.description}}</option>
-                        </select>
-                      </div>
-                      <div class="col-md-3">
-                        <label for="cep">Cep*</label>
-                        <input class="form-control" name="cep" id="cep" type="text" formControlName="cep"
-                          mask="00000-000" [dropSpecialCharacters]="true" (blur)="buscaCep(formCadastroMedico.value, $event.target.id)"/>
-                      </div>
-                      <div class="col-md-4">
-                        <label for="rua">Rua*</label>
-                        <input class="form-control" name="rua" id="rua" type="text" formControlName="rua"
-                          [dropSpecialCharacters]="true" />
-                      </div>
-                    </div>
-                    <div class="form-group row pl-3">
-                      <div class="col-md-4">
-                        <label for="bairro">Bairro*</label>
-                        <input class="form-control" name="bairro" id="bairro" type="text" formControlName="bairro"
-                          [dropSpecialCharacters]="true" />
-                      </div>
-                      <div class="col-md-3">
-                        <label for="numero">Número*</label>
-                        <input class="form-control" name="numero" id="numero" type="number" formControlName="numero"
-                          [dropSpecialCharacters]="true" />
-                      </div>
-                      <div class="col-md-4">
-                        <label for="complemento">Complemento</label>
-                        <input class="form-control" name="complemento" id="complemento" type="text"
-                          formControlName="complemento" [dropSpecialCharacters]="true" />
-                      </div>
                     </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-4">
@@ -219,6 +172,11 @@
                     <div class="form-group">
                       <h6>Clínica</h6>
                     </div>
+                    <div class="form-group">
+                      <div class="text-left">
+                        <b>{{ this.titleClinica }}</b>
+                      </div>
+                    </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-6">
                         <label for="name">Nome*</label>
@@ -263,7 +221,8 @@
                       <div class="col-md-2">
                         <label for="cep">Cep*</label>
                         <input class="form-control" name="zipCode" id="zipCode" type="text" formControlName="zipCode"
-                          mask="00000-000" [dropSpecialCharacters]="true" (blur)="buscaCep(formCadastroMedico.value, $event.target.id)"/>
+                          mask="00000-000" [dropSpecialCharacters]="true"
+                          (blur)="buscaCep(formCadastroMedico.value, $event.target.id)" />
                       </div>
                       <div class="col-md-3">
                         <label for="rua">Rua*</label>
@@ -316,7 +275,7 @@
                                 {{ row.federalId }}
                               </div>
                             </ng-template>
-                          </ngx-datatable-column>                         
+                          </ngx-datatable-column>
                           <ngx-datatable-footer>
                             <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
                               let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
